# nyaa-cli

./: README.md  pyproject.toml
.github/workflows/: build.yml  release.yml
nyaacli/: colors.py  nyaa_search.py  torrenting.py  utils.py
nyaacli/cli/: __init__.py
