[project]
name = "nyaacli"
version = "0.4.0"
description = "A CLI for downloading Anime from https://nyaa.si"
authors = [{ name = "John Victor", email = "johnvfs@protonmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"

keywords = ["CLI", "anime"]

classifiers = [
    "Environment :: Console",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "feedparser>=6.0.2",
    "guessit>=3.8",
    "click>=8.0",
    "colorama>=0.4.4",
    "questionary>=1.10.0",
    "rich>=12.2.0",
]

[project.urls]
Repository = "https://github.com/johnvictorfs/nyaa-cli"

[project.scripts]
nyaa-cli = "nyaacli.cli:main"
nyaa = "nyaacli.cli:main"

[dependency-groups]
dev = [
    "mypy>=1.0",
    "ruff>=0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
